fix: word wrap

--- a/components/article/ArticleCard.module.scss
+++ b/components/article/ArticleCard.module.scss
@@ -30,8 +30,9 @@
 }
 
 .articleContainer {
-  word-wrap: anywhere;
   width: 100%;
+  word-wrap: break-word;
+  word-break: break-all;
 }
 
 .articleContainer p {
@@ -59,14 +60,15 @@
 .buttonsContainer {
   display: flex;
   flex-wrap: wrap;
-  align-items: flex-start;
-  justify-content: space-between;
   width: 100%;
   margin-top: 8px;
 }
 
-.actionButtonContainer {
-  display: inline-block;
+.actionButton {
+  display: flex;
+  flex-grow: 0;
+  flex-shrink: 1;
+  flex-basis: content;
   margin-right: 12px;
   margin-top: 12px;
 }
