--- a/styles/global.scss
+++ b/styles/global.scss
@@ -16,6 +16,7 @@ body {
   color: colors.$on-surface;
 
   background-color: colors.$surface;
+  min-width: 300px;
   margin: 0;
   padding: 0;
 }
